force-app/main/default/objects/ISO_Industry_Relationship__c/ISO_Industry_Relationship__c.object-meta.xml
<CustomObject>
    <label>ISO+Acquirer Industry Relationship</label>
    <nameField>
        <label>Merchant Industry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISO+Acquirer Industry Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>