force-app/main/default/objects/ISO_Industry_Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISO</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ISO+Acquirer Industry Relationships</relationshipLabel>
    <relationshipName>Account_Industries</relationshipName>
    <type>Lookup</type>
</CustomField>