force-app/main/default/objects/ISO_Industry_Relationship__c/fields/Affiliate_Marketing_Supported__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Marketing_Supported__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Affiliate Marketing Supported?</label>
    <type>Checkbox</type>
</CustomField>