force-app/main/default/objects/ISO_Industry_Relationship__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry</label>
    <referenceTo>Industry2__c</referenceTo>
    <relationshipName>Account_Industries</relationshipName>
    <type>Lookup</type>
</CustomField>