force-app/main/default/objects/ISO_Industry_Relationship__c/fields/Industry_Formula__c.field-meta.xml
<CustomField>
    <fullName>Industry_Formula__c</fullName>
    <formula>Industry__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>