force-app/main/default/objects/ISO_Industry_Relationship__c/fields/Monthly_Monitoring_Fees_Required__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Monitoring_Fees_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Monitoring Fees Required</label>
    <type>Checkbox</type>
</CustomField>