force-app/main/default/objects/ISO_Industry_Relationship__c/fields/of_MIDs_per_Entity__c.field-meta.xml
<CustomField>
    <fullName>of_MIDs_per_Entity__c</fullName>
    <label># of MIDs per Entity</label>
    <length>30</length>
    <type>Text</type>
</CustomField>