force-app/main/default/objects/ISO_Industry_Relationship__c/fields/Processing_History_Required__c.field-meta.xml
<CustomField>
    <fullName>Processing_History_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processing History Required</label>
    <type>Checkbox</type>
</CustomField>