force-app/main/default/objects/ISO_Industry_Relationship__c/fields/Subscription_Billing_Supported__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Billing_Supported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Billing Supported</label>
    <type>Checkbox</type>
</CustomField>