force-app/main/default/objects/ISO_Industry_Relationship__c/fields/Trial_Supported__c.field-meta.xml
<CustomField>
    <fullName>Trial_Supported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trial Supported</label>
    <type>Checkbox</type>
</CustomField>