force-app/main/default/objects/ISO_Industry_Relationship__c/fields/Volume_Per_Entity__c.field-meta.xml
<CustomField>
    <fullName>Volume_Per_Entity__c</fullName>
    <label>Volume Per Entity</label>
    <length>30</length>
    <type>Text</type>
</CustomField>